[package]
name = "btcmnetwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#redis = "0.24.0"
s2n-quic = { version = "1.32.0", features = ["provider-event-tracing"] }
tokio = { version = "1.35.0", features = ["full"] }
btcmbase = {version = "0.1.0", path = "../btcmbase" }
bytes = "1.5.0"
async-nats = "0.33.0"
getset = "0.1.2"
uuid = {version ="1.6.1",features = ["v4","fast-rng","macro-diagnostics"] }
lazy_static = "1.4.0"
#nats = "0.24.1"
